--- a/.github/workflows/linux-cpu-arm64-build.yml
+++ b/.github/workflows/linux-cpu-arm64-build.yml
@@ -74,7 +74,16 @@ jobs:
         run: |
           docker run --rm \
           --volume $GITHUB_WORKSPACE:/onnxruntime_src \
-          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c "/usr/bin/python3 --version && /usr/bin/python3 -m venv genai-venv && source genai-venv/bin/activate && which -a python3 && /usr/bin/cmake --preset linux_gcc_cpu_release"
+          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c " \
+            mkdir -p ~/miniconda3 && \
+            wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh -O ~/miniconda3/miniconda.sh && \
+            bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3 && \
+            rm ~/miniconda3/miniconda.sh && \
+            source ~/miniconda3/bin/activate && \
+            conda create -y --name py312 python=3.12 \
+            conda activate py312 && \
+            python --version && \
+            /usr/bin/cmake --preset linux_gcc_cpu_release"
 
       - name: Docker -- Build with CMake and GCC
         run: |
