--- a/.github/workflows/linux-cpu-arm64-build.yml
+++ b/.github/workflows/linux-cpu-arm64-build.yml
@@ -76,7 +76,7 @@ jobs:
           --volume $GITHUB_WORKSPACE:/onnxruntime_src \
           -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c " \
             mkdir -p ~/miniconda3 && \
-            wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh -O ~/miniconda3/miniconda.sh && \
+            curl -o ~/miniconda3/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh && \
             bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3 && \
             rm ~/miniconda3/miniconda.sh && \
             source ~/miniconda3/bin/activate && \
