update install rust for linux

--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -40,7 +40,11 @@ jobs:
           gradle-version: '8.6'
 
       - name: Install Rust Toolchain
-        uses: dtolnay/rust-toolchain@1.82.0
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.82.0
+          override: true
+          profile: minimal
 
       - name: Get the Latest OnnxRuntime Nightly Version
         shell: pwsh
