--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           set -e -x
           rm -rf build
-          cmake --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON
+          cmake --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON -DRust_COMPILER=$HOME/.cargo/bin/rustc
           cmake --build --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON
 
       - name: Install the python wheel and test dependencies
