ignore ort-genai-static

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,13 +145,13 @@ endif()
 
 if(USE_GUIDANCE)
   target_include_directories(onnxruntime-genai PUBLIC ${llguidance_SOURCE_DIR}/parser/)
-  target_include_directories(onnxruntime-genai-static PUBLIC ${llguidance_SOURCE_DIR}/parser/)
+  # target_include_directories(onnxruntime-genai-static PUBLIC ${llguidance_SOURCE_DIR}/parser/)
   target_link_libraries(onnxruntime-genai PRIVATE llguidance_parser)
-  target_link_libraries(onnxruntime-genai-static PUBLIC llguidance_parser)
+  # target_link_libraries(onnxruntime-genai-static PUBLIC llguidance_parser)
   if (WIN32)
     # bcrypt is needed for the rust std lib
     target_link_libraries(onnxruntime-genai PRIVATE bcrypt)
-    target_link_libraries(onnxruntime-genai-static PRIVATE bcrypt)
+    # target_link_libraries(onnxruntime-genai-static PRIVATE bcrypt)
   endif()
 endif()
 
