--- a/.github/workflows/linux-cpu-x64-nightly-build.yml
+++ b/.github/workflows/linux-cpu-x64-nightly-build.yml
@@ -22,8 +22,15 @@ jobs:
       - name: Checkout OnnxRuntime GenAI repo
         uses: actions/checkout@v2
 
-      - name: Install Rust Toolchain
-        uses: dtolnay/rust-toolchain@1.82.0
+      - name: Install Rust with rustup
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          source "$HOME/.cargo/env"
+          rustup install 1.82.0
+          rustup override set 1.82.0
+          rustup component add rust-src
+          rustup show active-toolchain
 
       - name: Git Submodule Update
         run: |
