--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -41,6 +41,16 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: Install Rust with rustup
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          source "$HOME/.cargo/env"
+          rustup install 1.82.0
+          rustup override set 1.82.0
+          rustup component add rust-src
+          rustup show active-toolchain
+
       - name: Get the Latest OnnxRuntime Nightly Version
         shell: pwsh
         run: |
