disable USE_GUIDANCE by default

--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -70,6 +70,8 @@ jobs:
         (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
         & $exePath -y --default-toolchain=1.82.0
         Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
+        rustc --version
+        rustup show active-toolchain
 
     - name: Configure CMake
       run: |
