modify rust installation and update corrosion commit

--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -66,12 +66,16 @@ jobs:
 
     - name: Install Rust Toolchain
       run: |
+        # (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
+        # & $exePath -y --default-toolchain=1.82.0
+        # Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
         $exePath = "$env:TEMP\rustup-init.exe"
-        (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
-        & $exePath -y --default-toolchain=1.82.0
-        Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
-        rustc --version
-        rustup show active-toolchain
+        Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile $rustupInstaller
+        Start-Process -FilePath $rustupInstaller -ArgumentList "-y" -Wait
+        $env:PATH += ";$env:USERPROFILE\.cargo\bin"
+        rustup install 1.82.0-x86_64-pc-windows-msvc
+        rustup default 1.82.0-x86_64-pc-windows-msvc
+        rustup override set 1.82.0
 
     - name: Configure CMake
       run: |
