--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -66,13 +66,10 @@ jobs:
 
     - name: Install Rust Toolchain
       run: |
-        $rustupInstaller = "$env:TEMP\rustup-init.exe"
-        Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile $rustupInstaller
-        Start-Process -FilePath $rustupInstaller -ArgumentList "-y" -Wait
-        $env:PATH += ";$env:USERPROFILE\.cargo\bin"
-        rustup install 1.86.0-x86_64-pc-windows-msvc
-        rustup default 1.86.0-x86_64-pc-windows-msvc
-        rustup override set 1.86.0
+        $exePath = "$env:TEMP\rustup-init.exe"
+        (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
+        & $exePath -y --default-toolchain=1.86.0
+        Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
 
     - name: Configure CMake
       run: |
