--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -50,7 +50,7 @@ steps:
     $exePath = "$env:TEMP\rustup-init.exe"
     (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
     & $exePath -y --default-toolchain=1.86.0
-    Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
+    $env:PATH += ";$env:USERPROFILE\.cargo\bin"
   displayName: 'Install Rust Toolchain'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
