temp disable binskim

--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -79,11 +79,11 @@ steps:
       DisplayName: 'ESRP - Sign C++ dlls'
       Pattern: '*genai.dll'
 
-  - task: BinSkim@4
-    displayName: 'Run BinSkim'
-    inputs:
-      AnalyzeTargetGlob: '$(Build.Repository.LocalPath)\**\*genai.dll'
-    continueOnError: true
+  # - task: BinSkim@4
+  #   displayName: 'Run BinSkim'
+  #   inputs:
+  #     AnalyzeTargetGlob: '$(Build.Repository.LocalPath)\**\*genai.dll'
+  #   continueOnError: true
 
   - powershell: |
       python -m pip install wheel
