install clang for Win ARM

--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -70,6 +70,9 @@ jobs:
         (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/aarch64-pc-windows-msvc/rustup-init.exe', $exePath)
         & $exePath -y --default-toolchain=1.86.0
         Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
+
+    - name: Check Rust version and Install clang
+      run: |
         rustc --version
         cargo --version
         winget install LLVM.LLVM
