install clang for Win ARM

--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -75,7 +75,7 @@ jobs:
       run: |
         rustc --version
         cargo --version
-        winget install LLVM.LLVM
+        choco install llvm --yes
         clang --version
 
     - name: Configure CMake
