--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -76,6 +76,10 @@ jobs:
         rustc --version
         cargo --version
         choco install llvm --yes
+        Add-Content $env:GITHUB_PATH "C:\Program Files\LLVM\bin"
+
+    - name: Check Clang version
+      run: |
         clang --version
 
     - name: Configure CMake
