--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -94,7 +94,8 @@ jobs:
 
     - name: Install the Python Wheel and Test Dependencies
       run: |
-        python -m pip install "numpy<2" coloredlogs flatbuffers packaging protobuf sympy pytest
+        python -m pip install coloredlogs flatbuffers packaging protobuf sympy pytest
+        python -m pip install "numpy<2" --prefer-binary
         python -m pip install -i https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/ ort-nightly-qnn
         python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
