try guidance for mac

--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -49,11 +49,6 @@ jobs:
           rustup component add rust-src
           rustup show active-toolchain
 
-      - name: Check rustc
-        run: |
-          which rustc
-          rustc --version
-
       - name: Get the Latest OnnxRuntime Nightly Version
         shell: pwsh
         run: |
@@ -89,7 +84,7 @@ jobs:
         run: |
           set -e -x
           rm -rf build
-          cmake --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON -DRust_COMPILER=$HOME/.cargo/bin/rustc
+          cmake --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON
           cmake --build --preset linux_gcc_cpu_release -DUSE_GUIDANCE=ON
 
       - name: Install the python wheel and test dependencies
