--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -57,11 +57,11 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake --preset macos_arm64_cpu_release -DUSE_GUIDANCE=ON
+          cmake --preset macos_arm64_cpu_release
 
       - name: Build with CMake
         run: |
-          cmake --build --preset macos_arm64_cpu_release --parallel -DUSE_GUIDANCE=ON
+          cmake --build --preset macos_arm64_cpu_release --parallel
         continue-on-error: false
 
       - name: Install the python wheel and test dependencies
