--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -56,7 +56,7 @@ steps:
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
-    choco install llvm --yes
+    # choco install llvm --yes
     $env:PATH = "C:\Program Files\LLVM\bin;$env:PATH"
     Write-Host "##vso[task.setvariable variable=PATH]$env:PATH"
   displayName: 'Install LLVM'
@@ -77,7 +77,7 @@ steps:
 - powershell: |
     cmake --build --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON --parallel --target ${{ parameters.target }}
     # Uninstalling LLVM/Clang as it is no longer required and causes issues with numpy installation
-    choco uninstall llvm --yes
+    # choco uninstall llvm --yes
   displayName: 'Build C API'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
