Sign MacOS package

--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -50,6 +50,38 @@ steps:
     displayName: 'Package C/C++ API'
     workingDirectory: '$(Build.Repository.LocalPath)'
 
+  - bash: |
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      tar -xvzf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.tar.gz -C $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      zip -r $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-$(ep)-$(arch)-$(build_config).zip $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.tar.gz
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+    displayName: 'Convert from .tar.gz to .zip'
+    workingDirectory: '$(Build.Repository.LocalPath)'
+
+  - template: compliant/mac-esrp-archive-step.yml
+    parameters:
+      FolderPath: '$(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package'
+      DisplayName: 'ESRP - Sign MacOS C/C++ Package'
+      Pattern: '*.zip'
+
+  - bash: |
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      unzip $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.zip -d $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      tar -czvf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-$(ep)-$(arch)-$(build_config).tar.gz $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package onnxruntime-genai-*
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.zip
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*
+      ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+    displayName: 'List all files in the package for debugging'
+    workingDirectory: 'Convert from .zip to .tar.gz'
+
   - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
     inputs:
