--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -52,16 +52,16 @@ steps:
 
   - bash: |
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
-      tar -xvzf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.tar.gz -C $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
+      tar -xvzf onnxruntime-genai-*.tar.gz -C .
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
-      find $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec zip -r {}.zip {} \;
+      find . -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec zip -FSr --symlinks {}.zip {} \;
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
       rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.tar.gz
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
       find $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec rm -rf {} +
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
     displayName: 'Convert from .tar.gz to .zip'
-    workingDirectory: '$(Build.Repository.LocalPath)'
+    workingDirectory: '$(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package'
 
   - template: compliant/mac-esrp-archive-step.yml
     parameters:
@@ -72,7 +72,7 @@ steps:
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
       find . '*.zip' -exec unzip {} \;
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
-      find $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec tar -czvf {}.tar.gz {} \;
+      find . -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec tar -czvf {}.tar.gz {} \;
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
       rm -rf $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package/onnxruntime-genai-*.zip
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
