--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -72,7 +72,7 @@ steps:
   - bash: |
       set -e -x
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
-      find . '*.zip' -exec unzip {} \;
+      find . -name 'onnxruntime-genai-*.zip' -exec unzip {} \;
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
       find . -maxdepth 1 -type d -name 'onnxruntime-genai-*' -exec tar -czvf {}.tar.gz {} \;
       ls -al $(Build.Repository.LocalPath)/build/$(ep)/$(os)-$(arch)/package
