--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -85,6 +85,14 @@ extends:
       sourceRepositoriesToScan:
         include:
         - repository: manylinux
+      tsa:
+        enabled: true
+      codeSignValidation:
+        enabled: true
+        break: true
+      policheck:
+        enabled: true
+        exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
     stages:
     - template: stages/py-packaging-stage.yml
       parameters:
