--- a/.pipelines/android-publishing.yml
+++ b/.pipelines/android-publishing.yml
@@ -36,7 +36,7 @@ extends:
         break: true
       policheck:
         enabled: true
-        exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
+        # exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
     # Update the pool with your team's 1ES hosted pool.
     pool:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
