--- a/.pipelines/macos-ios-cocoapods-publishing.yml
+++ b/.pipelines/macos-ios-cocoapods-publishing.yml
@@ -29,13 +29,9 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
   parameters:
     sdl:
-      tsa:
-        enabled: true
-      codeSignValidation:
-        enabled: true
-        break: true
       policheck:
         enabled: true
+        break: true # always break the build on policheck issues. You can disable it by setting to 'false'
     # Update the pool with your team's 1ES hosted pool.
     pool:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
