--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -125,13 +125,9 @@ extends:
       sourceRepositoriesToScan:
         include:
         - repository: manylinux
-      tsa:
-        enabled: true
-      codeSignValidation:
-        enabled: true
-        break: true
       policheck:
         enabled: true
+        break: true # always break the build on policheck issues. You can disable it by setting to 'false'
     stages:
     - template: stages/capi-packaging-stage.yml
       parameters:
