Enable policheck in packaging pipeline (#1449)
Enable policheck in packaging pipelines for code compliance task

--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -85,6 +85,9 @@ extends:
       sourceRepositoriesToScan:
         include:
         - repository: manylinux
+      policheck:
+        enabled: true
+        break: true # always break the build on policheck issues. You can disable it by setting to 'false'
     stages:
     - template: stages/py-packaging-stage.yml
       parameters:
