--- a/.pipelines/macos-ios-cocoapods-publishing.yml
+++ b/.pipelines/macos-ios-cocoapods-publishing.yml
@@ -28,6 +28,10 @@ extends:
   # For productions pipelines, use "Official".
   template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
   parameters:
+    sdl:
+      policheck:
+        enabled: true
+        break: true # always break the build on policheck issues. You can disable it by setting to 'false'
     # Update the pool with your team's 1ES hosted pool.
     pool:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
