--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -88,6 +88,7 @@ extends:
       policheck:
         enabled: true
         break: true # always break the build on policheck issues. You can disable it by setting to 'false'
+        exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
     stages:
     - template: stages/py-packaging-stage.yml
       parameters:
